--- a/InvenTree/locale/zh/LC_MESSAGES/django.po
+++ b/InvenTree/locale/zh/LC_MESSAGES/django.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: inventree\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-09-08 03:30+0000\n"
-"PO-Revision-Date: 2021-09-11 02:47\n"
+"PO-Revision-Date: 2021-09-11 03:54\n"
 "Last-Translator: \n"
 "Language-Team: Chinese Simplified\n"
 "Language: zh_CN\n"
@@ -916,7 +916,7 @@ msgstr ""
 
 #: build/models.py:1248 order/models.py:941
 msgid "Allocation quantity must be greater than zero"
-msgstr ""
+msgstr "分配数量必须大于0"
 
 #: build/models.py:1252
 msgid "Quantity must be 1 for serialized stock"
@@ -931,7 +931,7 @@ msgstr ""
 #: templates/InvenTree/search.html:183 templates/js/translated/build.js:869
 #: templates/navbar.html:35
 msgid "Build"
-msgstr ""
+msgstr "生产"
 
 #: build/models.py:1373
 msgid "Build to allocate parts"
@@ -945,11 +945,11 @@ msgstr ""
 #: templates/js/translated/build.js:1012 templates/js/translated/order.js:797
 #: templates/js/translated/order.js:802 templates/js/translated/stock.js:1626
 msgid "Stock Item"
-msgstr ""
+msgstr "库存项"
 
 #: build/models.py:1390
 msgid "Source stock item"
-msgstr ""
+msgstr "源库存项"
 
 #: build/models.py:1403
 msgid "Stock quantity to allocate to build"
@@ -972,7 +972,7 @@ msgstr ""
 #: templates/js/translated/build.js:627
 #: templates/js/translated/model_renderers.js:57
 msgid "Serial Number"
-msgstr ""
+msgstr "序列号"
 
 #: build/templates/build/auto_allocate.html:9
 msgid "Automatically Allocate Stock"
@@ -1137,11 +1137,11 @@ msgstr ""
 
 #: build/templates/build/complete.html:8
 msgid "Build Order is complete"
-msgstr ""
+msgstr "生产订单已完成"
 
 #: build/templates/build/complete.html:12
 msgid "Build Order is incomplete"
-msgstr ""
+msgstr "生产订单未完成"
 
 #: build/templates/build/complete.html:15
 msgid "Incompleted build outputs remain"
@@ -1149,7 +1149,7 @@ msgstr ""
 
 #: build/templates/build/complete.html:18
 msgid "Required build quantity has not been completed"
-msgstr ""
+msgstr "所需生产数量尚未完成"
 
 #: build/templates/build/complete.html:21
 msgid "Required stock has not been fully allocated"
@@ -1161,7 +1161,7 @@ msgstr ""
 
 #: build/templates/build/complete_output.html:14
 msgid "Stock allocation is incomplete"
-msgstr ""
+msgstr "库存分配尚未完成"
 
 #: build/templates/build/complete_output.html:20
 msgid "tracked parts have not been fully allocated"
@@ -1224,11 +1224,11 @@ msgstr ""
 #: order/templates/order/sales_order_base.html:113
 #: templates/js/translated/build.js:933
 msgid "Created"
-msgstr ""
+msgstr "已创建"
 
 #: build/templates/build/detail.html:130
 msgid "No target date set"
-msgstr ""
+msgstr "无预计日期"
 
 #: build/templates/build/detail.html:135 templates/js/translated/build.js:911
 msgid "Completed"
@@ -1260,26 +1260,26 @@ msgstr ""
 
 #: build/templates/build/detail.html:176 build/views.py:318 build/views.py:638
 msgid "Unallocate Stock"
-msgstr ""
+msgstr "未分配库存"
 
 #: build/templates/build/detail.html:179
 msgid "Order required parts"
-msgstr ""
+msgstr "订单所需部件"
 
 #: build/templates/build/detail.html:180
 #: company/templates/company/detail.html:32
 #: company/templates/company/detail.html:72 order/views.py:679
 #: part/templates/part/category.html:140
 msgid "Order Parts"
-msgstr ""
+msgstr "订单部件"
 
 #: build/templates/build/detail.html:186
 msgid "Untracked stock has been fully allocated for this Build Order"
-msgstr ""
+msgstr "未跟踪的库存已完全分配给此生产订单"
 
 #: build/templates/build/detail.html:190
 msgid "Untracked stock has not been fully allocated for this Build Order"
-msgstr ""
+msgstr "未跟踪的库存尚未完全分配给此生产订单"
 
 #: build/templates/build/detail.html:197
 msgid "This Build Order does not have any associated untracked BOM items"
@@ -1287,7 +1287,7 @@ msgstr ""
 
 #: build/templates/build/detail.html:206
 msgid "Incomplete Build Outputs"
-msgstr ""
+msgstr "未完成的生产产出"
 
 #: build/templates/build/detail.html:211
 msgid "Create new build output"
