--- a/InvenTree/locale/zh/LC_MESSAGES/django.po
+++ b/InvenTree/locale/zh/LC_MESSAGES/django.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: inventree\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-09-12 13:15+0000\n"
-"PO-Revision-Date: 2021-09-12 13:44\n"
+"PO-Revision-Date: 2021-09-13 06:40\n"
 "Last-Translator: \n"
 "Language-Team: Chinese Simplified\n"
 "Language: zh_CN\n"
@@ -1232,31 +1232,31 @@ msgstr "无预计日期"
 
 #: build/templates/build/detail.html:135 templates/js/translated/build.js:911
 msgid "Completed"
-msgstr ""
+msgstr "已完成"
 
 #: build/templates/build/detail.html:139
 msgid "Build not complete"
-msgstr ""
+msgstr "生产未完成"
 
 #: build/templates/build/detail.html:150 build/templates/build/navbar.html:35
 msgid "Child Build Orders"
-msgstr ""
+msgstr "子生产订单"
 
 #: build/templates/build/detail.html:166
 msgid "Allocate Stock to Build"
-msgstr ""
+msgstr "为生产分配库存"
 
 #: build/templates/build/detail.html:172
 msgid "Allocate stock to build"
-msgstr ""
+msgstr "为生产分配库存"
 
 #: build/templates/build/detail.html:173
 msgid "Auto Allocate"
-msgstr ""
+msgstr "自动分配"
 
 #: build/templates/build/detail.html:175 templates/js/translated/build.js:801
 msgid "Unallocate stock"
-msgstr ""
+msgstr "未分配库存"
 
 #: build/templates/build/detail.html:176 build/views.py:318 build/views.py:638
 msgid "Unallocate Stock"
@@ -1321,11 +1321,11 @@ msgstr ""
 #: stock/templates/stock/item.html:88 stock/templates/stock/navbar.html:47
 #: stock/templates/stock/navbar.html:50
 msgid "Attachments"
-msgstr ""
+msgstr "附件"
 
 #: build/templates/build/detail.html:257
 msgid "Build Notes"
-msgstr ""
+msgstr "生产备注"
 
 #: build/templates/build/detail.html:261 build/templates/build/detail.html:398
 #: company/templates/company/detail.html:169
@@ -1337,7 +1337,7 @@ msgstr ""
 #: part/templates/part/detail.html:109 stock/templates/stock/item.html:103
 #: stock/templates/stock/item.html:188
 msgid "Edit Notes"
-msgstr ""
+msgstr "编辑备注"
 
 #: build/templates/build/detail.html:357
 #: order/templates/order/po_attachments.html:79
@@ -1346,7 +1346,7 @@ msgstr ""
 #: part/templates/part/detail.html:920 stock/templates/stock/item.html:253
 #: templates/attachment_table.html:6
 msgid "Add Attachment"
-msgstr ""
+msgstr "添加附件"
 
 #: build/templates/build/detail.html:376
 #: order/templates/order/po_attachments.html:51
@@ -1354,7 +1354,7 @@ msgstr ""
 #: order/templates/order/sales_order_detail.html:119
 #: part/templates/part/detail.html:874 stock/templates/stock/item.html:221
 msgid "Edit Attachment"
-msgstr ""
+msgstr "编辑附件"
 
 #: build/templates/build/detail.html:383
 #: order/templates/order/po_attachments.html:58
@@ -1362,7 +1362,7 @@ msgstr ""
 #: order/templates/order/sales_order_detail.html:125
 #: part/templates/part/detail.html:883 stock/templates/stock/item.html:230
 msgid "Confirm Delete Operation"
-msgstr ""
+msgstr "确认删除操作"
 
 #: build/templates/build/detail.html:384
 #: order/templates/order/po_attachments.html:59
@@ -1370,7 +1370,7 @@ msgstr ""
 #: order/templates/order/sales_order_detail.html:126
 #: part/templates/part/detail.html:884 stock/templates/stock/item.html:231
 msgid "Delete Attachment"
-msgstr ""
+msgstr "删除附件"
 
 #: build/templates/build/edit_build_item.html:7
 msgid "Alter the quantity of stock allocated to the build output"
@@ -1378,41 +1378,41 @@ msgstr ""
 
 #: build/templates/build/index.html:28
 msgid "New Build Order"
-msgstr ""
+msgstr "新建生产订单"
 
 #: build/templates/build/index.html:37 build/templates/build/index.html:38
 msgid "Print Build Orders"
-msgstr ""
+msgstr "打印生产订单"
 
 #: build/templates/build/index.html:43
 #: order/templates/order/purchase_orders.html:27
 #: order/templates/order/sales_orders.html:27
 msgid "Display calendar view"
-msgstr ""
+msgstr "显示日历"
 
 #: build/templates/build/index.html:46
 #: order/templates/order/purchase_orders.html:30
 #: order/templates/order/sales_orders.html:30
 msgid "Display list view"
-msgstr ""
+msgstr "列表视图"
 
 #: build/templates/build/navbar.html:12
 msgid "Build Order Details"
-msgstr ""
+msgstr "生产订单详情"
 
 #: build/templates/build/navbar.html:15 order/templates/order/po_navbar.html:15
 #: templates/js/translated/stock.js:1555
 msgid "Details"
-msgstr ""
+msgstr "详情"
 
 #: build/templates/build/navbar.html:20 build/templates/build/navbar.html:23
 #: build/views.py:90
 msgid "Allocate Stock"
-msgstr ""
+msgstr "分配库存"
 
 #: build/templates/build/navbar.html:28 build/templates/build/navbar.html:31
 msgid "Build Outputs"
-msgstr ""
+msgstr "生产产出"
 
 #: build/templates/build/navbar.html:38
 msgid "Child Builds"
@@ -1420,19 +1420,19 @@ msgstr ""
 
 #: build/templates/build/navbar.html:49
 msgid "Build Order Notes"
-msgstr ""
+msgstr "生产订单备注"
 
 #: build/templates/build/unallocate.html:10
 msgid "Are you sure you wish to unallocate all stock for this build?"
-msgstr ""
+msgstr "您确定要取消此生产的所有库存分配？"
 
 #: build/templates/build/unallocate.html:12
 msgid "All incomplete stock allocations will be removed from the build"
-msgstr ""
+msgstr "所有未完成的库存分配都将从生产中删除"
 
 #: build/views.py:76
 msgid "Build was cancelled"
-msgstr ""
+msgstr "生产已取消"
 
 #: build/views.py:137
 msgid "Allocated stock to build output"
